RESOLVED FIXED46932
Fix root-lr-basic.html to have correct results.
https://bugs.webkit.org/show_bug.cgi?id=46932
Summary Fix root-lr-basic.html to have correct results.
Dave Hyatt
Reported 2010-09-30 13:33:49 PDT
Fix root-lr-basic.html to have correct results by adding a few more height() -> logicalHeight() calls.
Attachments
Patch (4.63 KB, patch)
2010-09-30 13:34 PDT, Dave Hyatt
bdakin: review+
Dave Hyatt
Comment 1 2010-09-30 13:34:44 PDT
Dave Hyatt
Comment 2 2010-09-30 13:37:23 PDT
Fixed in r68820.
Note You need to log in before you can comment on or make changes to this bug.