https://bugs.webkit.org/show_bug.cgi?id=46932

Reviewed by Beth Dakin.

Get fast/blockflow/root-lr-basic.html results to be correct by patching a few more
height() calls to be logicalHeight().

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::collapseMargins):
(WebCore::RenderBlock::handleAfterSideOfBlock):



Canonical link: https://commits.webkit.org/59452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68820 268f45cc-cd09-0410-ab3c-d52691b4dbfc